<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vutuan.orderfood.DangKyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dangKy"
        android:textAlignment="center"
        android:textSize="@dimen/size30sp"
        android:padding="@dimen/size10dp"
        android:id="@+id/tvDangKy"
        android:layout_marginLeft="@dimen/size10dp"
        android:layout_marginRight="@dimen/size10dp"
        android:layout_marginTop="@dimen/size10dp"
        android:layout_above="@+id/layout_dangky"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_dangky"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/size10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/TenDangNhap"
            android:textColorHint="@color/colorGrey"
            android:drawablePadding="@dimen/size10dp"
            android:drawableLeft="@drawable/user"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:paddingBottom="@dimen/size10dp"
            android:textColor="@color/colorBlack"
            android:inputType="textPersonName"
            android:padding="@dimen/size10dp"
            android:id="@+id/edtTenDangKy"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/MatKhau"
            android:textColorHint="@color/colorGrey"
            android:textAlignment="textStart"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorBlack"
            android:maxLines="1"
            android:inputType="textPassword"
            android:padding="@dimen/size10dp"
            android:id="@+id/edtMatKhau"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/TenNhanVien"
            android:textColorHint="@color/colorGrey"
            android:textAlignment="textStart"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorBlack"
            android:maxLines="1"
            android:inputType="text"
            android:padding="@dimen/size10dp"
            android:id="@+id/edtTenNhanVien"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:id="@+id/rgGioiTinh">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioiTinhNam"
                android:id="@+id/rbNam"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gioiTinhNu"
                android:id="@+id/rbNu"/>
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/NgaySinh"
            android:textColorHint="@color/colorGrey"
            android:textAlignment="textStart"
            android:drawableLeft="@drawable/calender"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorBlack"
            android:padding="@dimen/size10dp"
            android:id="@+id/edtNgaySinh"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/CMND"
            android:textColorHint="@color/colorGrey"
            android:textAlignment="textStart"
            android:drawableLeft="@drawable/idcard"
            android:layout_margin="10dp"
            android:textColor="@color/colorBlack"
            android:inputType="numberDecimal"
            android:padding="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:id="@+id/edtCMND"
            android:maxLength="8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DongY"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:id="@+id/btnDongY"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Thoat"
                android:layout_weight="1"
                android:background="@color/colorBlue"
                android:id="@+id/btnThoat"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
