<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size30dp"
            android:layout_marginLeft="@dimen/size5dp"
            android:layout_marginRight="@dimen/size5dp"
            android:padding="@dimen/size10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/ten_mon_an"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/so_luong"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/gia_mon_an"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvThanhToan"
            android:layout_margin="@dimen/size5dp"
            android:padding="@dimen/size10dp"></ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/size10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tong_cong"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/txtTongCong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:textColor="@color/colorGrey"
            android:gravity="center"
            android:text="15000"/>
        <Button
            android:id="@+id/btnThanhToan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/thanh_toan"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>
