<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen">

    <TextView
        android:id="@+id/txtDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Đăng Nhập"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold"
        android:layout_above="@+id/layout_dangNhap"
        android:textAlignment="center"
        />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logodangnhap"
        android:layout_alignRight="@+id/txtDangNhap"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/layout_dangNhap"
        android:padding="@dimen/size10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTenDangNhap"
            android:hint="@string/TenDangNhap"
            android:drawableLeft="@drawable/user"
            android:background="@color/colorWhite"
            android:drawablePadding="@dimen/size10dp"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/colorGrey"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMatKhauDangNhap"
            android:hint="@string/MatKhau"
            android:drawableLeft="@drawable/password"
            android:background="@color/colorWhite"
            android:textColorHint="@color/colorGrey"
            android:padding="@dimen/size10dp"
            android:drawablePadding="@dimen/size10dp"
            android:layout_margin="@dimen/size10dp"
            android:textColor="@color/colorGrey"
            android:inputType="textPassword"
            />

            <Button
                android:id="@+id/btnDangNhap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DangNhap"
                android:background="@color/colorOrange"
                android:layout_marginTop="@dimen/size10dp"
                android:padding="@dimen/size10dp"/>
            <Button
                android:id="@+id/btnDangKy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dangKy"
                android:background="@color/colorBlue"
                android:layout_marginTop="@dimen/size10dp"/>



    </LinearLayout>

</RelativeLayout>